# bpftime-evaluation

./: .gitignore  .gitmodules  CO-RE.md  Dockerfile  README.md
assets/: bpftime_daemon
deepflow-runtime.casgstatus/: README.md
deepflow-runtime.casgstatus/benchmark/: README.md  avg.txt  benchmark-c100t10.md  benchmark-c500-c250.md  benchmark.md  collect_data.py  plot.py  run.py  test-data-multi-without-smatrt-ptr.json  test-data-multi.json  test_run.py
deepflow-runtime.casgstatus/go-server/: main.go
deepflow-runtime.casgstatus/go-server-http/: main.go
deepflow-runtime.casgstatus/scripts/: avg.py  plot.py
fuse/: README.md  passthrough.py  test.sh  test_find.md
fuse/bench/: filemicro_statfile.f
fuse/find_res/: draw.py  find_cache.txt  find_fuse.txt
fuse/fs-filter-cache/: README.md  bench.cpp  fs-cache.bpf.c  fs-cache.c
fuse/fs-open/: fs-cache.bpf.c
injector-benchmark/: benchmark-result-malloc.json
prove-of-concepts/: .gitignore  ffi.md  problems.md
prove-of-concepts/api-design/: bpftime.h
prove-of-concepts/cet/: .gitignore  Makefile  cet_demo.c  test.c
prove-of-concepts/file-meta-data/: .gitignore  Makefile  README.md  fs.cpp  getdents64.c  newfsstatat.c  stat.bt
prove-of-concepts/frida/: Makefile  hook.py  probe.py
prove-of-concepts/frida-gum/: Makefile  README.md  agent.c  inject.c  victim.c
prove-of-concepts/frida-gum-shm/: Makefile  agent.c  inject.c
prove-of-concepts/frida-gum-uprobe/: .gitignore  Makefile  agent.c  victim.c
prove-of-concepts/gate/: .gitignore  Makefile  enable.c  gate.bpf.c  gate.c  gate.strace  main  main.c  main.dis  main.dis1  main.disasm  res.json
prove-of-concepts/ld-preload-with-inject/: .gitignore  CMakeLists.txt  README.md  agent.cpp  injector.cpp  victim.cpp
prove-of-concepts/libbpf-syscall-polyfill/: CMakeLists.txt  README.md  agent.cpp  helpers_impl.cpp  wrapper.hpp
prove-of-concepts/llvm-ir-jit-poc/: .gitignore  CMakeLists.txt  README.md
prove-of-concepts/llvm-jit-ffi-poc/: .gitignore  CMakeLists.txt  README.md  main.cpp
prove-of-concepts/mpk/: .gitignore  Makefile  README.md  main.c  mpk-jit.c  mpk.strace  mpk1.c
prove-of-concepts/nginx-module-with-embedded-bpftime/: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Cargo-with-mirror.toml  Dockerfile  README.md  draw.py  index.html  module_aux.cpp  nginx-lua.conf  nginx.conf  run_multiple_benchmark.py
prove-of-concepts/nginx-module-with-embedded-bpftime/benchmark-result/: benchmark-go-server.md  benchmark-static-file-banana-new.md  benchmark-static-file-banana.md  benchmark-static-file.md  static-file-mnfe-new.md
prove-of-concepts/nginx-module-with-embedded-bpftime/benchmark-result-new/: bpftime-no-metric.json  bpftime-with-metric.json  lua.json  no-module.json  wasm-optimization.json  wasm-without-optimization.json
prove-of-concepts/nginx-module-with-embedded-bpftime/bpf-prog/: Makefile  nginx_test.bpf.c  nginx_test.c  nginx_test.h
prove-of-concepts/nginx-module-with-embedded-bpftime/bpf-prog-with-metric/: .gitignore
prove-of-concepts/nginx-module-with-embedded-bpftime/module/: config  ngx_http_bpftime_module.c
prove-of-concepts/nginx-module-with-embedded-bpftime/simple-wasmtime-aux/: .gitignore  Cargo.toml  README.md  handler.c  handler.wasm
prove-of-concepts/nginx-module-with-embedded-bpftime/simple-wasmtime-aux/src/: lib.rs
prove-of-concepts/pass-param/: README.md
prove-of-concepts/qemu-user/: hello.c
prove-of-concepts/shm/: .gitignore  Makefile  shm-boost.cpp  shm_reader.c  shm_writer.c
prove-of-concepts/shm-ringbuf/: Makefile  producer.cpp
prove-of-concepts/syscall-trace-injector/: .gitignore  Makefile  agent.cpp  def.h  hooker.cpp  injector.cpp  victim.cpp
prove-of-concepts/syscall-trace-with-ebpf/: CMakeLists.txt  README.md  agent.cpp  def.h  generate_syscall_table.sh  hooker.cpp  injector.cpp  opensnoop.bpf.c  test_driver.cpp  victim.cpp  vmlinux_mini.h
prove-of-concepts/syscall_intercept/: .gitignore  Makefile  syscall_intercept.c  test.c  test.txt
prove-of-concepts/usdt/: .gitignore  Makefile  main.c
redis-bpf/: .gitignore  Makefile  README.md  draw-batch.py  draw-new.py  draw.py  fsync_write.c  offcputime.sync.txt  test_redis_patch.md  test_user_kernel_together.md
redis-bpf/bpf/: rocksdb.bpf.c  rocksdb.c
redis-bpf/bpf-sync/: rocksdb.bpf.c
redis-bpf/bpf-sync-kernel/: rocksdb.bpf.c  rocksdb.c
redis-bpf/bpf-sync-next/: rocksdb.bpf.c
redis-bpf/iouring_hotpatch/: attach_override.h  rocksdb.bpf.c
rockdb-bpf/bpf/: rockdb.bpf.c  rockdb.c  rocksdb.bpf.c
rocksdb-bpf/: README.md
rocksdb-bpf/bpf/: Makefile  mix.json  right_attach.json  rocksdb.bpf.c  rocksdb.c  rocksdb.h  userspace.json
rocksdb-bpf/fsync/: Makefile  fsync.c
rocksdb-bpf/fsync-latency-bpf/: rocksdb.bpf.c  rocksdb.c  rocksdb.h
rocksdb-bpf/iouring_fsync_poc/: .gitignore  Makefile  README.md  iouing_fsync.c  iouring_fsync.bpf.c  iouring_fsync.c
rocksdb-bpf/simple_override/: rocksdb.bpf.c  rocksdb.c
spdk/: res.md  setup.md
sqlite/: HOW_TO_TEST.md  my_test.txt
sqlite/YCSB-Benchmark/: Makefile  README.md  test.sh  test_result.txt
sqlite/origin_sqlite/: .gitignore
ssl-nginx/: .gitignore  README.md  nginx.conf  process.py
ssl-nginx/binary/: sslsniff
sslsniff/: .gitignore  README.md  nginx.conf  sslsniff  test_bpftime.sh  test_kernel.sh
sslsniff-archive/: README.md  sslsniff
sslsniff-archive/archive/: test_nginx_bpftime.sh  test_nginx_kernel.sh  test_nginx_no_probe.sh
sslsniff-archive/old-res/: test-log-kernel-1.txt  test-log-kernel-2.txt  test-log-kernel-3.txt  test-log-no-effect-1.txt  test-log-no-effect-2.txt  test-log-no-effect-3.txt  test-log-user-1.txt  test-log-user-2.txt  test-log-user-3.txt
sslsniff/archive/: test_wget_bpftime.sh  test_wget_kernel.sh  test_wget_no_probe.sh
syscount/: .gitignore  Makefile  README.md  draw.py  nginx.conf  process.py  process_mnfe.py  test-log.txt
syscount/binary/: syscount
syscount/data/: test-log-with-filter.txt  test-log-without-syscount.txt
syscount/result-mnfe/: kernel_no-filter.txt  kernel_targeted-filter.txt  kernel_untargeted-filter.txt  userspace.txt
(+32 files in other folders)
